--- a/javascript/package.json
+++ b/javascript/package.json
@@ -10,7 +10,7 @@
     "react": "^16.3.0",
     "react-datepicker": "^1.4.0",
     "react-dom": "^16.3.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.5",
     "react-select": "^1.2.1"
   },
   "scripts": {
